--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="JgAFe9Qq1PCboZH5S6lgXsGpDZQJ2JEkMCPEdkVANLc" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Guide to Hassle-Free Rubbish Removal in South Woodham Ferrers. Tips for eco-friendly waste disposal, choosing professional services, and decluttering your space efficiently.">
@@ -135,3 +136,4 @@
 
 </body>
 </html>
+
